--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,11 +1,11 @@
-name: Build and Deploy Code
+name: Test
 
 on: [push, pull_request]
 
 jobs:
   build:
     environment:
-      name: testing
+      name: test
     env:
       DATABASE_HOSTNAME: ${{secrets.DATABASE_HOSTNAME}}
       DATABASE_PORT: ${{secrets.DATABASE_PORT}}
@@ -16,22 +16,7 @@ jobs:
       ALGORITHM: ${{secrets.ALGORITHM}}
       ACCESS_TOKEN_EXPIRE_MINUTES: ${{secrets.ACCESS_TOKEN_EXPIRE_MINUTES}}
 
-    services:
-      postgres:
-        image: postgres
-        env:
-          POSTGRES_PASSWORD: ${{secrets.DATABASE_PASSWORD}}
-          POSTGRES_DB: ${{secrets.DATABASE_NAME}}_test
-        ports:
-          - 5432:5432
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-  
-
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     steps:
       - name: pulling git repo
         uses: actions/checkout@v2
@@ -43,6 +28,8 @@ jobs:
         run: python -m pip install --upgrade pip
       - name: install all dependencies
         run: pip install -r requirements.txt
+      - name: create test db
+        run: sudo  docker run --name postgres-fastapi_test -e POSTGRES_USER=${{secrets.DATABASE_USERNAME}} -e POSTGRES_PASSWORD=${{secrets.DATABASE_PASSWORD}} -e POSTGRES_DB=${{secrets.DATABASE_NAME}}_test -p ${{secrets.DATABASE_PORT}}:${{secrets.DATABASE_PORT}} -d postgres:latest
       - name: test with pytest
         run: |
           pip install pytest
