resolve volume conflict

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -17,10 +17,10 @@ services:
       - ALGORITHM=${ALGORITHM}
       - ACCESS_TOKEN_EXPIRE_MINUTES=${ACCESS_TOKEN_EXPIRE_MINUTES}
     depends_on:
-      - postgres
+      - postgres-fastapi
 
-  postgres:
-    container_name: postgres
+  postgres-fastapi:
+    container_name: postgres-fastapi
     image: postgres
     environment:
       - POSTGRES_PASSWORD=${DATABASE_PASSWORD}
@@ -28,7 +28,7 @@ services:
     ports:
       - 6543:5432
     volumes:
-      - postgres-db:/var/lib/postgresql/data
+      - postgres-db-fastapi:/var/lib/postgresql/data
 
 volumes:
-  postgres-db: {}
+  postgres-db-fastapi:
